# spookyhash-c

./: CMakeLists.txt  spookyhash.c  spookyhash.h
